# dnf-desktop-launcher-gm

./: .gitignore  README.md  build-launcher.ps1
desktop_launcher/: index.html  package-lock.json  package.json  vite.config.js
desktop_launcher/public/: splash.html
desktop_launcher/src/: main.js  styles.css
desktop_launcher/src-tauri/: Cargo.toml  tauri.conf.json
desktop_launcher/src-tauri/capabilities/: default.json
desktop_launcher/src-tauri/src/: main.rs  rapid_fire.rs
server/: config.example.json  requirements.txt  run.py
server/app/: api.py  models.py
server/app/core/: audit.py  config.py  db.py  permissions.py  security.py
server/app/services/: accounts.py  launcher.py  tokens.py
server/app/services/pvf/: cache_manager.py  pvf_reader.py
server/data/posters/: README.txt
