[package]
name = "dnf-desktop-launcher"
version = "0.1.0"
description = "DNF desktop launcher"
authors = ["DNF Launcher Team"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-single-instance = "2.4.3"
keyring = { version = "3.6.3", features = ["windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10.6"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
